# magnesis

./: .gitignore  Cargo.toml  README.md  Taskfile.yml
src/: main.rs
