[package]
name = "magnesis"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
error-stack = "0.5.0"
reqwest = "0.12.8"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "process", "fs"] }
zip-extract = "0.2.1"
